venv/.guild/runs/682c2430e6204d388053d0a3e38801a9/.guild/output
Traceback (most recent call last):
  File "/Users/admin/Desktop/Thesis/Code/phc-data-pipeline/train.py", line 1, in <module>
    from runs import run
  File "/Users/admin/Desktop/Thesis/Code/phc-data-pipeline/runs.py", line 34
    """""
def drug_names(name, dr):
    names
    if name == 'overlap':
        for i in list(dr.values())[0]['Drug_name'].unique():
            if i in list(list(dr.values())[1]['Drug_name'].unique()) and i in  
""""
         
                         
         
                         
                                                            
                                                                               
      ^
SyntaxError: EOL while scanning string literal
